--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -86,4 +86,5 @@ html(lang="en")
                         input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                         button(type='submit') Split Track Name
                 td= song.length
-                td a(href=`https://www.google.com/search?q=${ encodeURIComponent( song.artistName ) }%20${ encodeURIComponent( song.trackName ) }`, target="_blank") Search
+                td
+                    a(href=`https://www.google.com/search?q=${ encodeURIComponent( song.artistName ) }%20${ encodeURIComponent( song.trackName ) }`, target="_blank") Search
