--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -25,82 +25,90 @@ html(lang="en")
             }
 
     body
-        h1 Current list of unverified songs from Robo's DB
-        form(action='/updateArtistDisplayName' method='POST')
-            input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-            button(type='submit') By Recent
-        form(action='/updateArtistDisplayName' method='POST')
-            input(type='hidden' name='byartist' value='#{req.query.byartist}')
-            button(type='submit') By Recent
-        form(action='/updateArtistDisplayName' method='POST')
-            input(type='hidden' name='bytrack' value='#{req.query.bytrack}')
-            button(type='submit') By Recent
-        form(action='/updateArtistDisplayName' method='POST')
-            input(type='text' name='searchvalue')
-            input(type='hidden' name='searchtrack' value='#{req.query.searchtrack}')
-            button(type='submit') By Recent
-        form(action='/updateArtistDisplayName' method='POST')
-            input(type='text' name='searchvalue')
-            input(type='hidden' name='searchartist' value='#{req.query.searchartist}')
-            button(type='submit') By Recent
-        table#songqueue
-            thead
-                tr
-                    th trackPlayedID
-                    th artistID
-                    th artistName
-                    td artistDisplayName
-                    th trackID
-                    th trackName
-                    th trackDisplayName
-                    th length
-                    th search
-            tbody
-            each song in songList
-                tr
-                td= song.artistID
-                td= song.artistName
-                td
-                    if song.artistDisplayName
-                        | #{song.artistDisplayName}
-                        form(action='/updateArtistDisplayName' method='POST')
-                            input(type='hidden' name='reset' value=true)
-                            input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                            input(type='hidden' name='artistID' value=song.artistID)
-                            button(type='submit') Reset
-                    else
-                        form(action='/updateArtistDisplayName' method='POST')
-                            input(type='text' name='artistDisplayName', value=song.artistName)
-                            input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                            input(type='hidden' name='artistID' value=song.artistID)
-                            button(type='submit') Update Artist
-                    form(action='/splitArtistName' method='POST')
-                        input(type='hidden' name='artistName', value=song.artistName)
+    h1 Current list of unverified songs from Robo's DB
+    table
+        tbody
+            tr
+            td
+                form(action='/updateArtistDisplayName' method='POST')
+                    input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
+                    button(type='submit') Sort by Recent
+            td
+                form(action='/updateArtistDisplayName' method='POST')
+                    input(type='hidden' name='byartist' value='#{req.query.byartist}')
+                    button(type='submit') Sort by Artist
+            td
+                form(action='/updateArtistDisplayName' method='POST')
+                    input(type='hidden' name='bytrack' value='#{req.query.bytrack}')
+                    button(type='submit') Sort by Track
+            td
+                form(action='/updateArtistDisplayName' method='POST')
+                    input(type='text' name='searchvalue')
+                    input(type='hidden' name='searchtrack' value='#{req.query.searchtrack}')
+                    button(type='submit') Search by Track
+            td
+                form(action='/updateArtistDisplayName' method='POST')
+                    input(type='text' name='searchvalue')
+                    input(type='hidden' name='searchartist' value='#{req.query.searchartist}')
+                    button(type='submit') Search by Artist
+    table#songqueue
+        thead
+            tr
+                th trackPlayedID
+                th artistID
+                th artistName
+                td artistDisplayName
+                th trackID
+                th trackName
+                th trackDisplayName
+                th length
+                th search
+        tbody
+        each song in songList
+            tr
+            td= song.artistID
+            td= song.artistName
+            td
+                if song.artistDisplayName
+                    | #{song.artistDisplayName}
+                    form(action='/updateArtistDisplayName' method='POST')
+                        input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                        input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
-                        button(type='submit') Split Artist
+                        input(type='hidden' name='artistID' value=song.artistID)
+                        button(type='submit') Reset
+                else
+                    form(action='/updateArtistDisplayName' method='POST')
+                        input(type='text' name='artistDisplayName', value=song.artistName)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
+                        input(type='hidden' name='artistID' value=song.artistID)
+                        button(type='submit') Update Artist
+                form(action='/splitArtistName' method='POST')
+                    input(type='hidden' name='artistName', value=song.artistName)
+                    input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
+                    input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
+                    button(type='submit') Split Artist
 
-                td= song.trackID
-                td= song.trackName
-                td
-                    if song.trackDisplayName
-                        | #{song.trackDisplayName}
-                        form(action='/updateTrackDisplayName' method='POST')
-                            input(type='hidden' name='reset' value=true)
-                            input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                            input(type='hidden' name='trackID' value=song.trackID)
-                            button(type='submit') Reset
-                    else
-                        form(action='/updateTrackDisplayName' method='POST')
-                            input(type='text' name='trackDisplayName', value=song.trackName)
-                            input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                            input(type='hidden' name='trackID' value=song.trackID)
-                            button(type='submit') Update Track Name
-                    form(action='/splitTrackName' method='POST')
-                        input(type='hidden' name='trackName', value=song.trackName)
+            td= song.trackID
+            td= song.trackName
+            td
+                if song.trackDisplayName
+                    | #{song.trackDisplayName}
+                    form(action='/updateTrackDisplayName' method='POST')
+                        input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
-                        input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
-                        button(type='submit') Split Track Name
-                td= song.length
-                td
-                    a(href=`https://www.google.com/search?q=${ encodeURIComponent( song.artistName ) }%20${ encodeURIComponent( song.trackName ) }`, target="_blank") Search
+                        input(type='hidden' name='trackID' value=song.trackID)
+                        button(type='submit') Reset
+                else
+                    form(action='/updateTrackDisplayName' method='POST')
+                        input(type='text' name='trackDisplayName', value=song.trackName)
+                        input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
+                        input(type='hidden' name='trackID' value=song.trackID)
+                        button(type='submit') Update Track Name
+                form(action='/splitTrackName' method='POST')
+                    input(type='hidden' name='trackName', value=song.trackName)
+                    input(type='hidden' name='byrecent' value='#{req.query.byrecent}')
+                    input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
+                    button(type='submit') Split Track Name
+            td= song.length
+            td
+                a(href=`https://www.google.com/search?q=${ encodeURIComponent( song.artistName ) }%20${ encodeURIComponent( song.trackName ) }`, target="_blank") Search
