--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -30,19 +30,19 @@ html(lang="en")
         tbody
             tr
             td
-                form(action='/updateArtistDisplayName?sort=time' method='POST')
+                form(action='/listunverified?sort=time' method='POST')
                     button(type='submit') Sort by Recent
             td
-                form(action='/updateArtistDisplayName?sort=artist' method='POST')
+                form(action='/listunverified?sort=artist' method='POST')
                     button(type='submit') Sort by Artist
             td
-                form(action='/updateArtistDisplayName?sort=track' method='POST')
+                form(action='/listunverified?sort=track' method='POST')
                     button(type='submit') Sort by Track
             td
-                form(action='/updateArtistDisplayName' method='POST')
+                form(action='/listunverified' method='POST')
                     button(type='submit') Search by Track
             td
-                form(action='/updateArtistDisplayName' method='POST')
+                form(action='/listunverified' method='POST')
                     button(type='submit') Search by Artist
     table#songqueue
         thead
