--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -31,7 +31,7 @@ html(lang="en")
             tr
             td
                 form(action='/listunverified?foo=bar' method='GET')
-                    input(type='hidden' name='wibble' value="wobble")
+                    //input(type='hidden' name='wibble' value="wobble")
                     button(type='submit') Sort by Recent
             td
                 form(action='/listunverified?sort=artist' method='GET')
