--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -32,6 +32,7 @@ html(lang="en")
             td
                 form(action='/listunverified?foo=bar' method='GET')
                     input(type='hidden' name='wibble' value="wobble")
+                    input(type='hidden' name='bibble' value="bobble")
                     button(type='submit') Sort by Recent
             td
                 form(action='/listunverified?sort=artist' method='GET')
