--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -41,18 +41,21 @@ html(lang="en")
                 form(action='/listunverified' method='GET')
                     input(type='hidden' name='sort' value="track")
                     button(type='submit') Sort by Track
+            tr
             td
                 form(action='/listunverified' method='GET')
                     input(type='hidden' name='sort' value="track")
                     input(type='hidden' name='where' value="track")
                     input(type='text' name='searchTerm')
                     button(type='submit') Search by Track
+            tr
             td
                 form(action='/listunverified' method='GET')
                     input(type='hidden' name='sort' value="artist")
                     input(type='hidden' name='where' value="artist")
                     input(type='text' name='searchTerm')
                     button(type='submit') Search by Artist
+
     table#songqueue
         thead
             tr
@@ -76,18 +79,21 @@ html(lang="en")
                     | #{song.artistDisplayName}
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
-                        input(type='hidden' name='sort' value='#{req.query.sort}')
+                        input(type='hidden' name='sort' value=sort)
+                        input(type='hidden' name='where' value=where)
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') Reset
                 else
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='text' name='artistDisplayName', value=song.artistName)
-                        input(type='hidden' name='sort' value='#{req.query.sort}')
+                        input(type='hidden' name='sort' value=sort)
+                        input(type='hidden' name='where' value=where)
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') Update Artist
                 form(action='/splitArtistName' method='POST')
                     input(type='hidden' name='artistName', value=song.artistName)
-                    input(type='hidden' name='sort' value='#{req.query.sort}')
+                    input(type='hidden' name='sort' value=sort)
+                    input(type='hidden' name='where' value=where)
                     input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                     button(type='submit') Split Artist
 
@@ -98,18 +104,21 @@ html(lang="en")
                     | #{song.trackDisplayName}
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
-                        input(type='hidden' name='sort' value='#{req.query.sort}')
+                        input(type='hidden' name='sort' value=sort)
+                        input(type='hidden' name='where' value=where)
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') Reset
                 else
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='text' name='trackDisplayName', value=song.trackName)
-                        input(type='hidden' name='sort' value='#{req.query.sort}')
+                        input(type='hidden' name='sort' value=sort)
+                        input(type='hidden' name='where' value=where)
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') Update Track Name
                 form(action='/splitTrackName' method='POST')
                     input(type='hidden' name='trackName', value=song.trackName)
-                    input(type='hidden' name='sort' value='#{req.query.sort}')
+                    input(type='hidden' name='sort' value=sort)
+                    input(type='hidden' name='where' value=where)
                     input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                     button(type='submit') Split Track Name
             td= song.length
