--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -31,20 +31,12 @@ html(lang="en")
             tr
             td
                 form(action='/listunverified' method='GET')
-                    input(type='hidden' name='sort' value="time")
-                    input(type='hidden' name='where' value=where)
-                    button(type='submit') Sort by Recent
-                form(action='/listunverified' method='GET')
-                    input(type='hidden' name='sort' value="artist")
-                    input(type='hidden' name='where' value=where)
-                    button(type='submit') Sort by Artist
-                form(action='/listunverified' method='GET')
-                    input(type='hidden' name='sort' value="track")
-                    input(type='hidden' name='where' value=where)
-                    button(type='submit') Sort by Track
-            tr
-            td
-                form(action='/listunverified' method='GET')
+                    label
+                        input(type='radio' name='sort' value='time' checked=sort === 'time') By Recent
+                    label
+                        input(type='radio' name='sort' value='artist' checked=sort === 'artist') By Artist
+                    label
+                        input(type='radio' name='sort' value='track' checked=sort === 'track') By Track
                     input(type='hidden' name='sort' value=sort)
                     input(type='hidden' name='where' value="track")
                     input(type='text' name='searchTerm')
@@ -52,6 +44,12 @@ html(lang="en")
             tr
             td
                 form(action='/listunverified' method='GET')
+                    label
+                        input(type='radio' name='sort' value='time' checked=sort === 'time') By Recent
+                    label
+                        input(type='radio' name='sort' value='artist' checked=sort === 'artist') By Artist
+                    label
+                        input(type='radio' name='sort' value='track' checked=sort === 'track') By Track
                     input(type='hidden' name='sort' value=sort)
                     input(type='hidden' name='where' value="artist")
                     input(type='text' name='searchTerm')
