--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -32,11 +32,27 @@ html(lang="en")
             td
                 form(action='/listunverified' method='GET')
                     label
-                        input(type='radio' name='sort' value='time' checked=sort === 'time') By Recent
+                        input(type='radio' name='sort' value='time' checked=sort === 'time')
+                        | By Recent
                     label
-                        input(type='radio' name='sort' value='artist' checked=sort === 'artist') By Artist
+                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                        | By Artist
                     label
-                        input(type='radio' name='sort' value='track' checked=sort === 'track') By Track
+                        input(type='radio' name='sort' value='track' checked=sort === 'track')
+                        | By Track
+                    button(type='submit') Get tracks
+            tr
+            td
+                form(action='/listunverified' method='GET')
+                    label
+                        input(type='radio' name='sort' value='time' checked=sort === 'time')
+                        | By Recent
+                    label
+                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                        | By Artist
+                    label
+                        input(type='radio' name='sort' value='track' checked=sort === 'track')
+                        | By Track
                     input(type='hidden' name='where' value="track")
                     input(type='text' name='searchTerm')
                     button(type='submit') Search by Track
@@ -44,11 +60,14 @@ html(lang="en")
             td
                 form(action='/listunverified' method='GET')
                     label
-                        input(type='radio' name='sort' value='time' checked=sort === 'time') By Recent
+                        input(type='radio' name='sort' value='time' checked=sort === 'time')
+                        | By Recent
                     label
-                        input(type='radio' name='sort' value='artist' checked=sort === 'artist') By Artist
+                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                        | By Artist
                     label
-                        input(type='radio' name='sort' value='track' checked=sort === 'track') By Track
+                        input(type='radio' name='sort' value='track' checked=sort === 'track')
+                        | By Track
                     input(type='hidden' name='where' value="artist")
                     input(type='text' name='searchTerm')
                     button(type='submit') Search by Artist
