--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -54,7 +54,10 @@ html(lang="en")
                         input(type='radio' name='sort' value='track' checked=sort === 'track')
                         | By Track
                     input(type='hidden' name='where' value="track")
-                    input(type='text' name='searchTerm' value=body.searchTerm)
+                    - if (req.query && req.query.searchTerm)
+                    input(type='text' name='searchTerm' value=req.query.searchTerm)
+                    - else
+                    input(type='text' name='searchTerm')
                     button(type='submit') Search by Track
             tr
             td
@@ -69,7 +72,10 @@ html(lang="en")
                         input(type='radio' name='sort' value='track' checked=sort === 'track')
                         | By Track
                     input(type='hidden' name='where' value="artist")
-                    input(type='text' name='searchTerm' value=body.searchTerm)
+                    - if (req.query && req.query.searchTerm)
+                        input(type='text' name='searchTerm' value=req.query.searchTerm)
+                    - else
+                        input(type='text' name='searchTerm')
                     button(type='submit') Search by Artist
 
     table#songqueue
