--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -71,12 +71,12 @@ html(lang="en")
                     label
                         input(type='radio' name='sort' value='track' checked=sort === 'track')
                         | By Track
-                    input(type='hidden' name='where' value="artist")
-                    if ( res.body && res.body.searchTerm )
-                        input(type='text' name='searchTerm' value=res.body.searchTerm)
+                    input(type='hidden' name='where' value="track")
+                    if ( '#{req.query}' && '#{req.query.searchTerm}' )
+                        input(type='text' name='searchTerm' value='#{req.query.searchTerm}')
                     else
                         input(type='text' name='searchTerm')
-                    button(type='submit') Search by Artist
+        button(type='submit') Search by Artist
 
     table#songqueue
         thead
