--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -54,29 +54,29 @@ html(lang="en")
                         input(type='radio' name='sort' value='track' checked=sort === 'track')
                         | By Track
                     input(type='hidden' name='where' value="track")
-                    if ( '#{req.query}' && '#{req.query.searchTerm}' )
-                        input(type='text' name='searchTerm' value='#{req.query.searchTerm}')
+                    if ( searchTerm )
+                        input(type='text' name='searchTerm' value=searchTerm)
                     else
                         input(type='text' name='searchTerm')
-                    button(type='submit') Search by Track
+                    button(type='submit') Search by Artist
             tr
-            td
-                form(action='/listunverified' method='GET')
-                    label
-                        input(type='radio' name='sort' value='time' checked=sort === 'time')
-                        | By Recent
-                    label
-                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
-                        | By Artist
-                    label
-                        input(type='radio' name='sort' value='track' checked=sort === 'track')
-                        | By Track
-                    input(type='hidden' name='where' value="track")
-                    if ( '#{req.query}' && '#{req.query.searchTerm}' )
-                        input(type='text' name='searchTerm' value='#{req.query.searchTerm}')
-                    else
-                        input(type='text' name='searchTerm')
-        button(type='submit') Search by Artist
+                td
+                    form(action='/listunverified' method='GET')
+                        label
+                            input(type='radio' name='sort' value='time' checked=sort === 'time')
+                            | By Recent
+                        label
+                            input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                            | By Artist
+                        label
+                            input(type='radio' name='sort' value='track' checked=sort === 'track')
+                            | By Track
+                        input(type='hidden' name='where' value="artist")
+                        if ( searchTerm )
+                            input(type='text' name='searchTerm' value=searchTerm)
+                        else
+                            input(type='text' name='searchTerm')
+                        button(type='submit') Search by Artist
 
     table#songqueue
         thead
