--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -102,20 +102,20 @@ html(lang="en")
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='sort' value=sort)
-                        input(type='hidden' name='where' value=where)
+                        input(type='hidden' name='searchTerm' value=searchTerm)
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') Reset
                 else
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='text' name='artistDisplayName', value=song.artistName)
                         input(type='hidden' name='sort' value=sort)
-                        input(type='hidden' name='where' value=where)
+                        input(type='hidden' name='searchTerm' value=searchTerm)
                         input(type='hidden' name='artistID' value=song.artistID)
                         button(type='submit') Update Artist
                 form(action='/splitArtistName' method='POST')
                     input(type='hidden' name='artistName', value=song.artistName)
                     input(type='hidden' name='sort' value=sort)
-                    input(type='hidden' name='where' value=where)
+                    input(type='hidden' name='searchTerm' value=searchTerm)
                     input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                     button(type='submit') Split Artist
 
@@ -127,20 +127,20 @@ html(lang="en")
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='sort' value=sort)
-                        input(type='hidden' name='where' value=where)
+                        input(type='hidden' name='searchTerm' value=searchTerm)
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') Reset
                 else
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='text' name='trackDisplayName', value=song.trackName)
                         input(type='hidden' name='sort' value=sort)
-                        input(type='hidden' name='where' value=where)
+                        input(type='hidden' name='searchTerm' value=searchTerm)
                         input(type='hidden' name='trackID' value=song.trackID)
                         button(type='submit') Update Track Name
                 form(action='/splitTrackName' method='POST')
                     input(type='hidden' name='trackName', value=song.trackName)
                     input(type='hidden' name='sort' value=sort)
-                    input(type='hidden' name='where' value=where)
+                    input(type='hidden' name='searchTerm' value=searchTerm)
                     input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                     button(type='submit') Split Track Name
             td= song.length
