--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -81,11 +81,9 @@ html(lang="en")
     table#songqueue
         thead
             tr
-                th trackPlayedID
-                th artistID
+                th videoID
                 th artistName
                 td artistDisplayName
-                th trackID
                 th trackName
                 th trackDisplayName
                 th length
@@ -93,8 +91,7 @@ html(lang="en")
         tbody
         each song in songList
             tr
-            td= song.trackPlayedID
-            td= song.artistID
+            td= song.videoID
             td= song.artistName
             td
                 if song.artistDisplayName
@@ -119,7 +116,6 @@ html(lang="en")
                     input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
                     button(type='submit') Split Artist
 
-            td= song.trackID
             td= song.trackName
             td
                 if song.trackDisplayName
