add link to YT video

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -81,13 +81,13 @@ html(lang="en")
     table#songqueue
         thead
             tr
-                th videoID
-                th artistName
-                td artistDisplayName
-                th trackName
-                th trackDisplayName
-                th length
-                th search
+                th youTube Link
+                th Artist Name
+                td Artist Display Name
+                th Track Name
+                th Track Display Name
+                th Length
+                th Search Link
         tbody
         each song in songList
             tr
