--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -101,21 +101,15 @@ html(lang="en")
                         input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='sort' value=sort)
                         input(type='hidden' name='searchTerm' value=searchTerm)
-                        input(type='hidden' name='artistID' value=song.artistID)
+                        input(type='hidden' name='videoData_id' value=song.videoData_id)
                         button(type='submit') Reset
                 else
                     form(action='/updateArtistDisplayName' method='POST')
                         input(type='text' name='artistDisplayName', value=song.artistName)
                         input(type='hidden' name='sort' value=sort)
                         input(type='hidden' name='searchTerm' value=searchTerm)
-                        input(type='hidden' name='artistID' value=song.artistID)
+                        input(type='hidden' name='videoData_id' value=song.videoData_id)
                         button(type='submit') Update Artist
-                form(action='/splitArtistName' method='POST')
-                    input(type='hidden' name='artistName', value=song.artistName)
-                    input(type='hidden' name='sort' value=sort)
-                    input(type='hidden' name='searchTerm' value=searchTerm)
-                    input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
-                    button(type='submit') Split Artist
 
             td= song.trackName
             td
@@ -125,21 +119,15 @@ html(lang="en")
                         input(type='hidden' name='reset' value=true)
                         input(type='hidden' name='sort' value=sort)
                         input(type='hidden' name='searchTerm' value=searchTerm)
-                        input(type='hidden' name='trackID' value=song.trackID)
+                        input(type='hidden' name='videoData_id' value=song.videoData_id)
                         button(type='submit') Reset
                 else
                     form(action='/updateTrackDisplayName' method='POST')
                         input(type='text' name='trackDisplayName', value=song.trackName)
                         input(type='hidden' name='sort' value=sort)
                         input(type='hidden' name='searchTerm' value=searchTerm)
-                        input(type='hidden' name='trackID' value=song.trackID)
+                        input(type='hidden' name='videoData_id' value=song.videoData_id)
                         button(type='submit') Update Track Name
-                form(action='/splitTrackName' method='POST')
-                    input(type='hidden' name='trackName', value=song.trackName)
-                    input(type='hidden' name='sort' value=sort)
-                    input(type='hidden' name='searchTerm' value=searchTerm)
-                    input(type='hidden' name='trackPlayedID' value=song.trackPlayedID)
-                    button(type='submit') Split Track Name
             td= song.length
             td
                 a(href=`https://www.google.com/search?q=${ encodeURIComponent( song.artistName ) }%20${ encodeURIComponent( song.trackName ) }`, target="_blank") Search
