Create a signup page

--- a/templates/signup.pug
+++ b/templates/signup.pug
@@ -13,14 +13,17 @@ html(lang="en")
             label(for="email")
                 | Email:
             input(type="email", id="email", name="email", required)
+
             label(for="username")
-            | Username:
+                | Username:
             input(type="text", id="username", name="username", required)
+
             label(for="password")
-            | Password:
+                | Password:
             input(type="password", id="password", name="password", required)
+
             label(for="confirmPassword")
-            | Confirm Password:
+                | Confirm Password:
             input(type="password", id="confirmPassword", name="confirmPassword", required)
-            button(type="submit")
-            | Sign Up
+
+            button(type="submit") Sign Up
