Create a signup page

--- a/templates/signup.pug
+++ b/templates/signup.pug
@@ -26,4 +26,4 @@ html(lang="en")
                 | Confirm Password:
             input(type="password", id="confirmPassword", name="confirmPassword", required)
 
-            button(type="submit") Sign Up
+            button(type="submit") Sign Up Now
